--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: ^1.0.7
+  image_gallery_saver: ^2.0.3
+  path_provider: ^2.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -62,6 +65,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/image/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -86,5 +91,13 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
+  fonts:
+    - family: edu
+      fonts:
+        - asset: assets/fonts/eduregular.ttf
+        - asset: assets/fonts/edubold.ttf
+          weight: 700
+        - asset: assets/fonts/eduSemiBold.ttf
+          weight: 300
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
