--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   image_picker: ^1.0.7
   image_gallery_saver: ^2.0.3
   path_provider: ^2.1.2
-
+  share_plus: ^7.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -67,6 +68,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/image/
+    - assets/bgimage/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
