--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,6 @@ flutter:
         - asset: assets/fonts/edubold.ttf
           weight: 700
         - asset: assets/fonts/eduSemiBold.ttf
-          weight: 300
+          style: italic
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
